--- a/app/src/main/res/layout/item_listview_ad.xml
+++ b/app/src/main/res/layout/item_listview_ad.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageListModel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@tools:sample/avatars" />
