--- a/app/src/main/res/layout/activity_ad_view.xml
+++ b/app/src/main/res/layout/activity_ad_view.xml
@@ -21,7 +21,7 @@
             android:id="@+id/image_description_page"
             android:layout_width="match_parent"
             android:layout_height="612dp"
-            android:src="@tools:sample/avatars"
+            android:src="@drawable/betonniere_electrique"
             app:srcCompat="@drawable/betonniere_electrique"
             tools:srcCompat="@drawable/betonniere_electrique" />
 
