--- a/app/src/main/res/layout/item_listview_ad.xml
+++ b/app/src/main/res/layout/item_listview_ad.xml
@@ -7,20 +7,26 @@
 
     <LinearLayout
         android:id="@+id/testtest"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="411dp"
+        android:layout_height="98dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageAdModel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="102dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageAdModel"
+                android:layout_width="103dp"
+                android:layout_height="97dp" />
+        </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="310dp"
+            android:layout_height="98dp"
             android:orientation="vertical">
 
             <TextView
@@ -34,6 +40,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Adresse" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="150dp"
+                android:layout_marginBottom="5dp"
+                android:text="Button" />
         </LinearLayout>
 
     </LinearLayout>
