--- a/app/src/main/res/layout/item_listview_ad.xml
+++ b/app/src/main/res/layout/item_listview_ad.xml
@@ -42,14 +42,14 @@
                 android:text="Adresse" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/button_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="150dp"
                 android:layout_marginBottom="5dp"
-                android:text="Button" />
+                android:text="Description" />
         </LinearLayout>
 
     </LinearLayout>
