--- a/app/src/main/res/layout/activity_ad_view.xml
+++ b/app/src/main/res/layout/activity_ad_view.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/title_description_page"
+            android:id="@+id/title_view_page"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="title_description_page"
@@ -20,7 +20,7 @@
             android:textSize="24sp" />
 
         <ImageView
-            android:id="@+id/image_description_page"
+            android:id="@+id/image_view_page"
             android:layout_width="wrap_content"
             android:layout_height="400sp"
             android:src="@drawable/echelle_telescopique"
@@ -28,7 +28,7 @@
 
 
         <TextView
-            android:id="@+id/Description_page"
+            android:id="@+id/Description_View_page"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="monospace"
@@ -37,7 +37,7 @@
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/button_description_page"
+            android:id="@+id/button_view_page"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Retour"
