--- a/app/src/main/res/layout/activity_ad_add.xml
+++ b/app/src/main/res/layout/activity_ad_add.xml
@@ -36,11 +36,10 @@
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/Titre_input"
+                    android:id="@+id/title_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Titre" />
-
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
