--- a/app/src/main/res/layout/activity_ad_add.xml
+++ b/app/src/main/res/layout/activity_ad_add.xml
@@ -30,6 +30,12 @@
                 android:src="@drawable/echelle_telescopique" />
 
 
+            <Button
+                android:id="@+id/button_foto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="AJOUTER UNE FOTO" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/TitreInputLayout"
                 android:layout_width="match_parent"
